    - Fixed a sign propagation bug in tools::traceExteriorBoundaries() used by
      tools::meshToVolume(). This could cause values to not be propagated across
      node boundaries, leading to voxels incorrectly being marked as inside the
      isosurface. [Contributed by Tristan Barback]

    API changes:
    - Removed a number of deprecated point methods.

    Houdini:
    - Platonic SOP is now verbified.
    - Extend all SOP references to support VDB Points.

    Improvements:
    - Introduced a StringMetaCache class for convenient string attribute
      metadata lookup and performed some minor optimizations.

Version 7.0.0 - December 6, 2019

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 18.0. To preserve ABI compatibility,
      when compiling OpenVDB or any dependent code define the macro
      OPENVDB_ABI_VERSION_NUMBER=N, where, for example, N is 5 for
      Houdini 17.0 and 17.5 and 6 for Houdini 18.0.

      As of this release, a C++14 compiler is required and the oldest
      supported Houdini version is 17.0.

    New features:
    - LevelSetMeasure can now compute multiple types of curvatures (averge and total
      Gaussian and mean curvature) as well as Euler characteristic and genus of
      level set surfaces.
    - Most stencil classes now have an intersection method that detcts the axial
      directions of zero-crossings (as oppose to the existing boolean intersection test).
    - The CurvatureStencil can now compute Gaussian and principal
      curvatures (in addition to mean curvature).
    - Added Tree::nodeCount, which counts the number and type of nodes
      in a tree very efficiently.
    - Added new RootNode::addChild() and InternalNode::addChild() methods to
      allow the insertion of child nodes directly.

    Improvements: